# annual-training

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: app.rs  certificate.rs  lib.rs  main.rs  quiz.rs
