[package]
name = "annual-training"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
sha2 = "0.10"
webbrowser = "1"
